--- a/CorinneCity/CorinneCity.csproj
+++ b/CorinneCity/CorinneCity.csproj
@@ -20,6 +20,13 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <MvcProjectUpgradeChecked>true</MvcProjectUpgradeChecked>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
+    <OldToolsVersion>4.0</OldToolsVersion>
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -223,6 +230,7 @@
     <Content Include="Content\bubble_default.css" />
     <Content Include="Content\calendar_white.css" />
     <Content Include="Content\forms.css" />
+    <Content Include="Content\fullcalendar.min.css" />
     <Content Include="Content\layout.css" />
     <Content Include="Content\menu_default.css" />
     <Content Include="Content\month_white.css" />
@@ -341,12 +349,15 @@
     <Content Include="Images\logo.jpg" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <None Include="Scripts\jquery-1.8.3-vsdoc.js" />
+    <Content Include="Scripts\fullcalendar.js" />
+    <Content Include="Scripts\fullcalendar.min.js" />
     <Content Include="Scripts\jquery-1.8.3.js" />
     <Content Include="Scripts\jquery-1.8.3.min.js" />
     <Content Include="Scripts\jquery-treeview-1.0.1.js" />
     <Content Include="Scripts\jquery-ui-1.9.2.js" />
     <Content Include="Scripts\jquery-ui-1.9.2.min.js" />
     <Content Include="Scripts\jquery-ui.custom.min.js" />
+    <Content Include="Scripts\jquery.balloon.js" />
     <Content Include="Scripts\jquery.innerfade.js" />
     <Content Include="Scripts\jquery.marquee.js" />
     <Content Include="Scripts\jquery.marquee.min.js" />
@@ -361,6 +372,7 @@
     <Content Include="Scripts\knockout-2.1.0.js" />
     <Content Include="Scripts\Minutes.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
+    <Content Include="Scripts\moment.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
