--- a/CorinneCity/CorinneCity.csproj
+++ b/CorinneCity/CorinneCity.csproj
@@ -301,6 +301,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tooltip.min.css" />
     <Content Include="Images\5klogo.jpg" />
+    <Content Include="Images\animated-easter-bunny.gif" />
     <Content Include="Images\bell.jpg" />
     <Content Include="Images\boatramp.jpg" />
     <Content Include="Images\bridge.jpg" />
@@ -442,6 +443,7 @@
     <Content Include="Views\IndActivities\Schedule.cshtml" />
     <Content Include="Views\IndActivities\Register.cshtml" />
     <Content Include="Views\IndActivities\Basketball.cshtml" />
+    <Content Include="Views\IndActivities\Easter.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
